# cc-benchmark

./: .claude  .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  monitor-benchmark.sh  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  run-benchmark.sh
benchmark/: benchmark.py  cc_wrapper.py  models.py  pnpm-test.sh  tracker.py
dev-tests/: README.md  simple_test.py  test_claude_code_integration.py  test_sdk.py
docker/: Dockerfile  README.md  docker-entrypoint.sh  docker.sh  docker_build.sh  setup-claude-auth.sh
docs/: IMPLEMENTATION_LOG.md  IMPLEMENTATION_PLAN.md  MILESTONE_MANAGER.md  TECHNICAL_DEBT.md  VISION.md  documentation-audit-checklist.md
docs/architecture/: logging.md  tracking-system.md
docs/milestones/: M0-Docker_Environment_Setup.md  M0_1-Docker_Environment_Cleanup.md  M0_Docker_Environment_Setup.md  M1-MVP_Test_the_Hypothesis.md  M1_MVP_Test_Hypothesis.md  M1_MVP_Test_the_Hypothesis.md  M2-Technical_Debt_Resolution.md  M3-Full_Benchmark.md
docs/tools/: cc-models.md  cc-sdk.md
tests/: README.md  __init__.py  conftest.py  model_sync_checker.py  test_model_sync.py  test_tracker.py
