[project]
name = "cc-benchmark"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    # MVP core requirements
    "claude-code-sdk>=0.0.19",
    "aider-chat>=0.85.2",
    "typer>=0.16.0",
    "pandas>=2.3.1",
    # Additional infrastructure (can be removed later if not needed)
    "lox>=0.13.0",
    "matplotlib>=3.10.5",
    "imgcat>=0.6.0",
    "pytest>=8.4.1",
    "pandas-stubs==2.3.0.250703",
    "anthropic>=0.61.0",
]

[tool.setuptools.packages.find]
include = ["benchmark*", "tests*"]
exclude = ["logs*", "docker*", "tmp.benchmarks*"]
